--- a/pom.xml
+++ b/pom.xml
@@ -13,46 +13,57 @@
     <description>Plugin para Paper con soporte para Multiverse-Core</description>
 
     <properties>
-        <java.version>17</java.version>  <!-- Cambia a la versión de Java que uses -->
-        <minecraft.version>1.21</minecraft.version>  <!-- Versión de Minecraft -->
-        <paper.version>${minecraft.version}-R0.1-SNAPSHOT</paper.version>  <!-- Última versión de Paper -->
+        <java.version>17</java.version>
+        <minecraft.version>1.21</minecraft.version>
+        <paper.version>${minecraft.version}-R0.1-SNAPSHOT</paper.version>
     </properties>
 
     <repositories>
-        <!-- Repositorio de Paper -->
         <repository>
             <id>papermc</id>
             <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
-
-        <!-- Repositorio de Multiverse-Core -->
         <repository>
             <id>OnARandomBox</id>
             <url>https://repo.onarandombox.com/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
     </repositories>
 
     <dependencies>
-        <!-- Dependencia de Paper -->
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
             <version>${paper.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- Dependencia de Multiverse-Core -->
         <dependency>
             <groupId>com.onarandombox.multiversecore</groupId>
             <artifactId>multiverse-core</artifactId>
             <version>4.3.14</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Dependencia de SQLite -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.36.0.3</version> <!-- Usa la última versión disponible -->
+            <version>3.49.1.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
